client/sass/sections/_repos.scss
.repos {
  @include min($tablet) {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }
}

.repo {
  margin-bottom: 30px;

  @include min($tablet) {
    flex-basis: 45%;

    margin-bottom: 50px;
  }

  @include min($desktop) {
    flex-basis: 27.5%;
  }
}

.repo-name {
  display: block;
  margin-bottom: 15px;

  font-size: 2.1rem;

  @include min($desktop) {
    transition: color .5s ease;
  }
}

  .repo-name:hover {
    @include min($desktop) {
      color: $copper;
    }
  }

  .repo-name::first-letter {
    text-transform: uppercase;
  }

.repo-desc {
  margin-bottom: 20px;

  font-size: 1.3rem;
  line-height: 1.5;

  @include min($desktop) {
    margin-bottom: 15px;
  }
}

.repo-stats {
  display: flex;
  align-items: center;

  margin-bottom: 15px;
}

.repo-stat {
  display: flex;
  align-items: center;

  margin-right: 15px;
}

.repo-stat-icon {
  margin-right: 5px;
}

.repo-stat-text {
  font-size: 1.2rem;
  line-height: 1;
  text-align: center;
}

.repo-url {
  display: inline-flex;
  align-items: center;

  color: $copper;

  @include min($desktop) {
    display: none;
  }
}

  .repo-url-icon {
    margin-left: 10px;
  }

